--- a/static/css/media.css
+++ b/static/css/media.css
@@ -1,5 +1,48 @@
 /* *************************************meida**********************************************************  */
-
+@media (max-width: 1000px) {
+  .nav_links a,
+  .prodcuts_hover {
+    padding: 0 10px;
+    font-size: 22px;
+    font-family: "Cormorant Garamond", serif;
+    color: purple;
+    font-weight: 400;
+  }
+  .navbar_Search {
+    display: none;
+  }
+  .navbar_Search::placeholder {
+    color: black;
+  }
+  .navbar_Search_show {
+    display: block;
+    position: absolute;
+    top: 80px;
+    left: 35%;
+    background-color: white;
+    color: black;
+    width: 100%;
+  }
+  .sm_search_btn {
+    display: none;
+    position: absolute;
+    top: 85px;
+    left: 65%;
+    max-width: 250px;
+    padding: 10px 15px;
+    outline: none;
+    border: none;
+    font-family: "Cormorant Garamond", serif;
+    font-size: 18px;
+    background-color: #c9afc6;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.381);
+    color: white;
+    border-radius: 10px;
+  }
+  .sm_search_btn_show {
+    display: block;
+  }
+}
 @media (max-width: 800px) {
   html {
     font-size: 8px;
@@ -10,8 +53,6 @@
   .footer_socil_links a {
     margin: 10px;
   }
-}
-@media (max-width: 700px) {
   .nav_links_main {
     display: flex;
     padding-top: 100px;
@@ -27,12 +68,15 @@
     z-index: 5;
     width: 100%;
   }
+
   .navlinks_show {
     left: 0;
   }
   .menu_btn i {
     display: block;
   }
+}
+@media (max-width: 700px) {
   html {
     font-size: 7px;
   }
